[ADD] content on html and [ADD] syle on css and [ADD] log js on dom

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 <body>
 
+    <div class="container dc-container my-5 text-center">
+        <h1>FizzBuzz DOM</h1>
+        <div class="container-fluid boxes my-5 d-flex flex-wrap">
+            
+        </div>
+    </div>
+
+
     <!-- JAVASCRIPT -->
     <script src="js/script.js"></script>
 </body>
